[project]
name = "ocx-tail"
version = "0.1.3"
description = "OpenClaw CLI companion: tail/analyze/export for agent runs"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["typer>=0.12.0", "rich>=13.7.0"]

[project.scripts]
ocx = "ocx.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
